# mechAInistic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml  format.yml
docs/: .readthedocs.yaml  conf.py  index.rst
src/prototype/: README.md
tests/: test_prototype.py
